[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "malini"
classifiers = ["Private :: Do Not Upload"]
version = "1.0"
requires-python = ">=3.9"
dependencies = [
    "fontmake",
    "fontFeatures",
    "pyyaml",
    "munch",
    "ufonormalizer",
    "Brotli"
]

[project.optional-dependencies]
tests = [
    "fontbakery[ufo-sources, googlefonts]",
]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
